
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int abort; } ;
struct TYPE_5__ {TYPE_1__ mu_cookie; } ;
typedef TYPE_2__ MuOfficeRender ;



void MuOfficeRender_abort(MuOfficeRender *render)
{
 if (render)
  render->mu_cookie.abort = 1;
}
